--- a/Predict_Blood_Donation_for_Future_Expectancy.ipynb
+++ b/Predict_Blood_Donation_for_Future_Expectancy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Predict Blood Donation for Future Expectancy.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKDkc1QjlYKhoXEsFp0ObH",
+      "authorship_tag": "ABX9TyPS56jSoD8dQM99yBzobggd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1273,6 +1273,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Installing TPOT PACKAGE**"
+      ],
+      "metadata": {
+        "id": "e2xBBEESWfv_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install TPOT"
@@ -1333,6 +1342,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**USING THE TPOT CLASSIFEIR**"
+      ],
+      "metadata": {
+        "id": "XHXHDMpPWqY6"
+      }
     },
     {
       "cell_type": "code",
@@ -1424,6 +1442,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**CALCULATING THE VARIANCE**"
+      ],
+      "metadata": {
+        "id": "vZY2t5VrW9Bv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_train.var().round(2)"
@@ -1452,6 +1479,15 @@
           "execution_count": 18
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**USING LOG NORMALIZATION TO NORMALIZE THE DATA**"
+      ],
+      "metadata": {
+        "id": "-uleJuOcXVZZ"
+      }
     },
     {
       "cell_type": "code",
@@ -1496,6 +1532,15 @@
           "execution_count": 44
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Calculating the SCORE**"
+      ],
+      "metadata": {
+        "id": "ZZ4jOx-0XjlL"
+      }
     },
     {
       "cell_type": "code",
